# krunner-pinyin-search

./: CMakeLists.txt  Messages.sh  README.md
src/: CMakeLists.txt  pinyinmatch.cpp  pinyinmatch.h  pinyinsearch.cpp  pinyinsearch.h  pinyinsearch.json  pinyintable.txt  res.qrc
